--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -5,7 +5,7 @@
   padding-top: 16px;
   position: fixed;
   top: 0;
-  z-index: 999;
+  z-index: 100;
 
   @media screen and (min-width: 768px) {
     padding-top: 24px;
@@ -91,6 +91,7 @@
   transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   transform: translate(-150%);
   transition: transform 250ms;
+  z-index: 999;
 
   &.is-open {
     transform: translateX(0);
