--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -47,7 +47,6 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 1.21;
-    z-index: 1;
 
     @media screen and (min-width: 768px) {
       width: 76px;
